--- a/platforms/common/scss/admin/_navbar.scss
+++ b/platforms/common/scss/admin/_navbar.scss
@@ -9,7 +9,6 @@
         right: $content-padding + $content-margin;
         top: $content-padding;
         position: absolute;
-        z-index: 1;
         @include breakpoint(tablet-range) {
             display: none;
         }
